--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -1,35 +1,26 @@
----
-layout: default
----
-<!-- _layouts/cv.html -->
-        <div class="post">
+{\rtf1\ansi\ansicpg1252\cocoartf2708
+\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\froman\fcharset0 Times-Roman;\f1\froman\fcharset0 Times-Bold;}
+{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
+{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
+\margl1440\margr1440\vieww17280\viewh13200\viewkind0
+\deftab720
+\pard\pardeftab720\partightenfactor0
 
-          <header class="post-header">
-            <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
-            <p class="post-description">{{ page.description }}</p>
-          </header>
+\f0\fs24 \cf0 \expnd0\expndtw0\kerning0
+\outl0\strokewidth0 \strokec2 --- layout: default ---\
+\pard\pardeftab720\sa321\partightenfactor0
 
-          <article>
-            <div class="cv">
-              {% for entry in site.data.cv %}
-                <div class="card mt-3 p-3">
-                  <h3 class="card-title font-weight-medium">{{ entry.title }}</h3>
-                  <div>
-                  {% if entry.type == "list" %}
-                    {% include cv/list.html %}
-                  {% elsif entry.type == "map" %}
-                    {% include cv/map.html %}
-                  {% elsif entry.type == "nested_list" %}
-                    {% include cv/nested_list.html %}
-                  {% elsif entry.type == "time_table" %}
-                   {% include cv/time_table.html %}
-                  {% else %}
-                    {{ entry.contents }}
-                  {% endif %}
-                  </div>
-                </div>
-              {% endfor %}
-              </div>
-          </article>
+\f1\b\fs48 \cf0 \{\{ page.title \}\} \{% if page.t_pdf %\}\{% endif %\}\
+\pard\pardeftab720\sa240\partightenfactor0
 
-        </div>
+\f0\b0\fs24 \cf0 \{\{ page.description \}\}\
+\pard\pardeftab720\partightenfactor0
+\cf0 \{% for entry in site.data.talks %\}\
+\pard\pardeftab720\sa280\partightenfactor0
+
+\f1\b\fs28 \cf0 \{\{ entry.title \}\}\
+\pard\pardeftab720\partightenfactor0
+
+\f0\b0\fs24 \cf0 \{% if entry.type == "list" %\} \{% include talks/list.html %\} \{% elsif entry.type == "map" %\} \{% include talks/map.html %\} \{% elsif entry.type == "nested_list" %\} \{% include talks/nested_list.html %\} \{% elsif entry.type == "time_table" %\} \{% include talks/time_table.html %\} \{% else %\} \{\{ entry.contents \}\} \{% endif %\}\
+\{% endfor %\}\
+}
