--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -1,26 +1,7 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2708
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\froman\fcharset0 Times-Roman;\f1\froman\fcharset0 Times-Bold;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
-\margl1440\margr1440\vieww17280\viewh13200\viewkind0
-\deftab720
-\pard\pardeftab720\partightenfactor0
-
-\f0\fs24 \cf0 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 --- layout: default ---\
-\pard\pardeftab720\sa321\partightenfactor0
-
-\f1\b\fs48 \cf0 \{\{ page.title \}\} \{% if page.t_pdf %\}\{% endif %\}\
-\pard\pardeftab720\sa240\partightenfactor0
-
-\f0\b0\fs24 \cf0 \{\{ page.description \}\}\
-\pard\pardeftab720\partightenfactor0
-\cf0 \{% for entry in site.data.talks %\}\
-\pard\pardeftab720\sa280\partightenfactor0
-
-\f1\b\fs28 \cf0 \{\{ entry.title \}\}\
-\pard\pardeftab720\partightenfactor0
-
-\f0\b0\fs24 \cf0 \{% if entry.type == "list" %\} \{% include talks/list.html %\} \{% elsif entry.type == "map" %\} \{% include talks/map.html %\} \{% elsif entry.type == "nested_list" %\} \{% include talks/nested_list.html %\} \{% elsif entry.type == "time_table" %\} \{% include talks/time_table.html %\} \{% else %\} \{\{ entry.contents \}\} \{% endif %\}\
-\{% endfor %\}\
-}
+--- layout: default ---
+{{ page.title }} {% if page.talk_pdf %}{% endif %}
+{{ page.description }}
+{% for entry in site.data.talks %}
+{{ entry.title }}
+{% if entry.type == "list" %} {% include talks/list.html %} {% elsif entry.type == "map" %} {% include talks/map.html %} {% elsif entry.type == "nested_list" %} {% include talks/nested_list.html %} {% elsif entry.type == "time_table" %} {% include talks/time_table.html %} {% else %} {{ entry.contents }} {% endif %}
+{% endfor %}
