--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -1,13 +1,35 @@
-<p>--- layout: default ---</p>
+---
+layout: default
+---
+<!-- _layouts/talks.html -->
+        <div class="post">
 
-<h1>{{ page.title }} {% if page.talks_pdf %}{% endif %}</h1>
+          <header class="post-header">
+            <h1 class="post-title">{{ page.title }} {% if page.talks_pdf %}<a href="{{ page.talks_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
+            <p class="post-description">{{ page.description }}</p>
+          </header>
 
-<p>{{ page.description }}</p>
+          <article>
+            <div class="talks">
+              {% for entry in site.data.talks %}
+                <div class="card mt-3 p-3">
+                  <h3 class="card-title font-weight-medium">{{ entry.title }}</h3>
+                  <div>
+                  {% if entry.type == "list" %}
+                    {% include talks/list.html %}
+                  {% elsif entry.type == "map" %}
+                    {% include talks/map.html %}
+                  {% elsif entry.type == "nested_list" %}
+                    {% include talks/nested_list.html %}
+                  {% elsif entry.type == "time_table" %}
+                   {% include talks/time_table.html %}
+                  {% else %}
+                    {{ entry.contents }}
+                  {% endif %}
+                  </div>
+                </div>
+              {% endfor %}
+              </div>
+          </article>
 
-<p>{% for entry in site.data.talks %}</p>
-
-<h3>{{ entry.title }}</h3>
-
-<p>{% if entry.type == &quot;list&quot; %} {% include talks/list.html %} {% elsif entry.type == &quot;map&quot; %} {% include talks/map.html %} {% elsif entry.type == &quot;nested_list&quot; %} {% include talks/nested_list.html %} {% elsif entry.type == &quot;time_table&quot; %} {% include talks/time_table.html %} {% else %} {{ entry.contents }} {% endif %}</p>
-
-<p>{% endfor %}</p>
+        </div>
